# cpphtslib

./: .c_cpp_properties.json  .gitignore  CMakeLists.txt  README.md  alog  log
HtsgetServer/: CMakeLists.txt  Common.h  Doxyfile  README.md  main.cpp
HtsgetServer/include/: Codec.h  Connection.h  Constants.h  Encoding.h  Message.h  Request.h  RequestParser.h  Response.h  Router.h  Server.h  Trie.h  Uri.h  Utilities.h  server.h
HtsgetServer/src/: Connection.cpp  HtsgetServerConfig.h.in  Message.cpp  Request.cpp  RequestParser.cpp  Response.cpp  Router.cpp  Server.cpp  Trie.cpp  Uri.cpp  server.cpp
HtsgetServer/test/: test_Codec.cpp  test_Encoding.cpp  test_Message.cpp  test_RequestParser.cpp  test_Response.cpp  test_Router.cpp  test_Server.cpp  test_Trie.cpp  test_Uri.cpp  test_fib.cpp
Http/: CMakeLists.txt  README.md  main-test.cpp  main.cpp
Http/include/: Codec.h  Connection.h  Constants.h  Cors.h  Message.h  Request.h  RequestParser.h  Response.h  Router.h  Server.h  Trie.h  Uri.h  Utilities.h
Http/src/: Connection.cpp  Message.cpp  RequestParser.cpp  Response.cpp  Server.cpp  Uri.cpp
Http/ssl/: cert.pem  dh512.pem  key.pem  passphrase  req.cnf  server.crt  server.csr  server.key  server.key.secure
Http/test/: test_Codec.cpp  test_Message.cpp  test_RequestParser.cpp  test_Router.cpp  test_Server.cpp  test_Trie.cpp
Server/: CMakeLists.txt  Common.h  Config.h  Error.h  README.md  Ticket.h  Wrapper.h  main.cpp
data/: cramtest.cram.crai  vcftest.vcf.gz.tbi
htslib/: CMakeLists.txt  README.md
htslib/include/: foo.h
htslib/src/: foo.cpp
learn/: CMakeLists.txt  server_architecture.md
learn/code/: TCP_daytime_server.cpp  timer.cpp
test/: ll.bam
